--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Hector Dolo</title>
-  <meta content="" name="description">
+  <meta content="Hector Dolo" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -48,6 +48,11 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="wfh-setup.html">WFH Setup</a></li>
+          <li class="drop-down"><a href="">Online Finds</a>
+            <ul>
+              <li><a href="useful-things/fitness.html">Fitness</a></li>
+            </ul>
+          </li>
         </ul>
       </nav><!-- .nav-menu -->
 
