--- a/wfh-setup.html
+++ b/wfh-setup.html
@@ -48,6 +48,11 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li class="active"><a href="wfh-setup.html">WFH Setup</a></li>
+          <li class="drop-down"><a href="">Online Finds</a>
+            <ul>
+              <li><a href="useful-things/fitness.html">Fitness</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
     </div>
